--- a/windows11.html
+++ b/windows11.html
@@ -33,7 +33,7 @@
   <p class="lead">🌹 可通过下面的 4 个选项来创建 Windows 11 介质。请分别查看每一个选项，确定最适合您的一个。<br>🌹 在安装之前，请参阅电脑健康状况检查应用，以确认您的设备满足 Windows 11 的最低系统要求，并检查 Windows 版本信息状态，了解可能会影响您设备的已知问题。</p>
   <hr class="my-4">
   <p>(当前版本：Windows 11 2023 更新 l 版本 23H2)</p>
-  <p class="lead"> <a class="btn btn-primary btn-lg" href="#" role="button">👀 前往 HelloWindows 下载</a> <a class="btn btn-primary btn-lg" href="#" role="button">👀 前往 Microsoft 下载</a> <a class="btn btn-primary btn-lg" href="#" role="button">💡 有问题吗？</a> </p>
+  <p class="lead"> <a class="btn btn-primary btn-lg" href="https://hellowindows.cn/" role="button">👀 前往 HelloWindows 下载（暂未更新）</a> <a class="btn btn-primary btn-lg" href="https://www.microsoft.com/zh-cn/software-download/windows11" role="button">👀 前往 Microsoft 下载</a> <a class="btn btn-primary btn-lg" href="https://support.microsoft.com/zh-cn/windows" role="button">💡 有问题吗？</a> </p>
 </div>
 <script src="js/jquery-3.4.1.min.js"></script>
 <script src="js/popper.min.js"></script>
